fix: solve error in all tests
