# swagger-output.json
@@ -10,198 +10,7 @@
       "url": "http://localhost:3333"
     }
   ],
-  "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/tests": {
-      "post": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/militares/{id}/formacoes": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/militares/{id}": {
-      "delete": {
-        "tags": [
-          "Militares"
-          "Militares"
-        ],
-        "summary": "Returns a user by id",
-        "description": "This endpoint will return a user by id...",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            },
-            "description": "Some description..."
-          }
-        ],
-        "responses": {
-          "204": {
-          "204": {
-            "description": "Some description...",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/noContentDelete"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Some description...",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/badRequestError"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Some description...",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "message": "Militar não encontrado",
-                  "data": null,
-                  "error": {
-                    "stack": "dladladladaldlal",
-                    "name": "BadRequestError",
-                    "message": "aldaldladlaldaldla"
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Some description...",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/serverError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/militares": {
-      "get": {
-        "tags": [
-          "Militares"
-        ],
-        "description": "",
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/militaresResponse"
-                }
-              }
-            },
-            "description": "OK"
-          },
-          "204": {
-            "description": "Some description...",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/noContentDelete"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Some description...",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/serverError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/militares": {
-      "get": {
-        "tags": [
-          "Militares"
-        ],
-        "description": "",
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/militaresResponse"
-                }
-              }
-            },
-            "description": "OK"
-          },
-          "204": {
-            "description": "Some description...",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/noContentDelete"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Some description...",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/serverError"
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  },
+  "paths": {},
   "components": {
     "schemas": {
       "someBody": {
@@ -271,55 +80,6 @@
           }
         }
       },
-      "noContentDelete": {
-        "type": "object",
-        "properties": {
-          "data": {},
-          "message": {
-            "type": "string",
-            "example": "Dados deletado com Sucesso"
-          },
-          "error": {}
-        }
-      },
-      "badRequestError": {
-        "type": "object",
-        "properties": {
-          "message": {
-            "type": "string",
-            "example": "Error de validação"
-          },
-          "data": {},
-          "error": {
-            "type": "object",
-            "properties": {
-              "statusCode": {
-                "type": "string",
-                "example": "400"
-              }
-            }
-          }
-        }
-      },
-      "serverError": {
-        "type": "object",
-        "properties": {
-          "message": {
-            "type": "string",
-            "example": "Erro interno. Por favor tente mais tarde."
-          },
-          "data": {},
-          "error": {
-            "type": "object",
-            "properties": {
-              "statusCode": {
-                "type": "string",
-                "example": "500"
-              }
-            }
-          }
-        }
-      },
       "someEnum": {
         "type": "string",
         "enum": [
@@ -327,337 +87,6 @@
           "yellow",
           "green"
         ]
-      },
-      "militaresResponse": {
-        "type": "object",
-        "properties": {
-          "message": {
-            "type": "string",
-            "example": "Dados buscados com sucesso"
-          },
-          "data": {
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "id": {
-                  "type": "string",
-                  "example": "any_id"
-                },
-                "nome": {
-                  "type": "string",
-                  "example": "any_nome"
-                },
-                "nomeGuerra": {
-                  "type": "string",
-                  "example": "any_nomeGuerra"
-                },
-                "dataNascimento": {
-                  "type": "string",
-                  "example": "any_dataNascimento"
-                },
-                "sexo": {
-                  "type": "string",
-                  "example": "Masculino"
-                },
-                "patente": {
-                  "type": "string",
-                  "example": "any_patente"
-                },
-                "situacaoMilitar": {
-                  "type": "string",
-                  "example": "any_patente"
-                },
-                "nacionalidade": {
-                  "type": "string",
-                  "example": "any_nacionalidade"
-                },
-                "estadoCivil": {
-                  "type": "string",
-                  "example": "any_estadoCivil"
-                },
-                "dataIncorporacao": {
-                  "type": "string",
-                  "example": "any_dataIncorporacao"
-                },
-                "naturalidade": {
-                  "type": "string",
-                  "example": "any_naturalidade"
-                },
-                "telefone1": {
-                  "type": "string",
-                  "example": "any_telefone1"
-                },
-                "telefone2": {
-                  "type": "string",
-                  "example": "any_telefone2"
-                },
-                "NIP": {
-                  "type": "string",
-                  "example": "any_nip"
-                },
-                "email": {
-                  "type": "string",
-                  "example": "any_email@mail.com"
-                },
-                "endereco": {
-                  "type": "object",
-                  "properties": {
-                    "provincia": {
-                      "type": "string",
-                      "example": "any_provincia"
-                    },
-                    "municipio": {
-                      "type": "string",
-                      "example": "any_provincia"
-                    },
-                    "bairro": {
-                      "type": "string",
-                      "example": "any_bairro"
-                    },
-                    "rua": {
-                      "type": "string",
-                      "example": "any_rua"
-                    },
-                    "numeroCasa": {
-                      "type": "string",
-                      "example": "any_numeroCasa"
-                    }
-                  }
-                },
-                "DadosPessoais": {
-                  "type": "object",
-                  "properties": {
-                    "filiacaoMaterna": {
-                      "type": "string",
-                      "example": "any_filiacaoMaterna"
-                    },
-                    "filiacaoPaterna": {
-                      "type": "string",
-                      "example": "any_filiacaoPaterna"
-                    },
-                    "numeroBI": {
-                      "type": "string",
-                      "example": "any_numeroBI"
-                    },
-                    "numeroPassaporte": {
-                      "type": "string",
-                      "example": "any_numeroPassaporte"
-                    },
-                    "numeroSegurancaSocial": {
-                      "type": "string",
-                      "example": "any_numeroSegurancaSocial"
-                    },
-                    "quantidadeFilho": {
-                      "type": "number",
-                      "example": 4
-                    },
-                    "nomeEsposa": {
-                      "type": "string",
-                      "example": "any_nomeEsposa"
-                    }
-                  }
-                },
-                "Promocao": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "string",
-                        "example": "any_id"
-                      },
-                      "promocao": {
-                        "type": "string",
-                        "example": "any_promocao"
-                      },
-                      "descricao": {
-                        "type": "string",
-                        "example": "any_descricao"
-                      },
-                      "dataPromocao": {
-                        "type": "string",
-                        "example": "any_dataPromocao"
-                      }
-                    }
-                  }
-                },
-                "FormacoesAcademicas": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "string",
-                        "example": "any_id"
-                      },
-                      "instituicao": {
-                        "type": "string",
-                        "example": "any_instituicao"
-                      },
-                      "tipoDeEnsino": {
-                        "type": "string",
-                        "example": "any_tipoDeEnsino"
-                      },
-                      "classe": {
-                        "type": "string",
-                        "example": "any_classe"
-                      },
-                      "Ano": {
-                        "type": "string",
-                        "example": "any_ano"
-                      },
-                      "dataInicio": {
-                        "type": "string",
-                        "example": "any_dataInicio"
-                      },
-                      "dataFim": {
-                        "type": "string",
-                        "example": "any_dataFim"
-                      },
-                      "curso": {
-                        "type": "string",
-                        "example": "any_curso"
-                      },
-                      "militarId": {
-                        "type": "string",
-                        "example": "any_militarId"
-                      },
-                      "createdAt": {
-                        "type": "string",
-                        "example": "any_data"
-                      },
-                      "updatedAt": {
-                        "type": "string",
-                        "example": "any_data"
-                      }
-                    }
-                  }
-                },
-                "FormacoesMilitares": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "string",
-                        "example": "any_id"
-                      },
-                      "instituicao": {
-                        "type": "string",
-                        "example": "any_instituicao"
-                      },
-                      "dataInicio": {
-                        "type": "string",
-                        "example": "any_dataInicio"
-                      },
-                      "dataFim": {
-                        "type": "string",
-                        "example": "any_dataFim"
-                      },
-                      "curso": {
-                        "type": "string",
-                        "example": "any_curso"
-                      },
-                      "militarId": {
-                        "type": "string",
-                        "example": "any_militarId"
-                      },
-                      "createdAt": {
-                        "type": "string",
-                        "example": "any_data"
-                      },
-                      "updatedAt": {
-                        "type": "string",
-                        "example": "any_data"
-                      }
-                    }
-                  }
-                },
-                "Especilidades": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "string",
-                        "example": "any_id"
-                      },
-                      "instituicao": {
-                        "type": "string",
-                        "example": "any_instituicao"
-                      },
-                      "tipoDeEnsino": {
-                        "type": "string",
-                        "example": "any_tipoDeEnsino"
-                      },
-                      "dataInicio": {
-                        "type": "string",
-                        "example": "any_dataInicio"
-                      },
-                      "dataFim": {
-                        "type": "string",
-                        "example": "any_dataFim"
-                      },
-                      "curso": {
-                        "type": "string",
-                        "example": "any_curso"
-                      },
-                      "militarId": {
-                        "type": "string",
-                        "example": "any_militarId"
-                      },
-                      "createdAt": {
-                        "type": "string",
-                        "example": "any_data"
-                      },
-                      "updatedAt": {
-                        "type": "string",
-                        "example": "any_data"
-                      }
-                    }
-                  }
-                },
-                "ContactoEmergencia": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "string",
-                        "example": "any_id"
-                      },
-                      "nome": {
-                        "type": "string",
-                        "example": "any_nome"
-                      },
-                      "telefone": {
-                        "type": "string",
-                        "example": "any_telefone"
-                      },
-                      "grauParentesco": {
-                        "type": "string",
-                        "example": "any_grauParentesco"
-                      },
-                      "militarId": {
-                        "type": "string",
-                        "example": "any_militarId"
-                      },
-                      "createdAt": {
-                        "type": "string",
-                        "example": "any_data"
-                      },
-                      "updatedAt": {
-                        "type": "string",
-                        "example": "any_data"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
       },
       "militaresResponse": {
         "type": "object",
